@@ -94,6 +94,8 @@ const drive_settings builtin_knowndrives[] = {
     "-v 12,raw48,Power_Cycle_Count "
     "-v 13,raw48,Read_Soft_Error_Rate "
     //  14-174 Unknown_Attribute
+    "-v 171,raw48,Program_Fail_Count "            // SSD only
+    "-v 172,raw48,Erase_Fail_Count "              // SSD only
     "-v 175,raw48,Program_Fail_Count_Chip "       // SSD only
     "-v 176,raw48,Erase_Fail_Count_Chip "         // SSD only
     "-v 177,raw48,Wear_Leveling_Count "           // SSD only
@@ -195,8 +197,8 @@ const drive_settings builtin_knowndrives[] = {
   //"-v 9,raw24(raw8),Power_On_Hours "
   //"-v 12,raw48,Power_Cycle_Count "
     "-v 170,raw48,Grown_Failing_Block_Ct "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 173,raw48,Wear_Leveling_Count "
     "-v 174,raw48,Unexpect_Power_Loss_Ct "
     "-v 181,raw16,Non4k_Aligned_Access "
@@ -230,8 +232,8 @@ const drive_settings builtin_knowndrives[] = {
   //"-v 9,raw24(raw8),Power_On_Hours "
   //"-v 12,raw48,Power_Cycle_Count "
     "-v 170,raw48,Grown_Failing_Block_Ct "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 173,raw48,Wear_Leveling_Count "
     "-v 174,raw48,Unexpect_Power_Loss_Ct "
     "-v 181,raw16,Non4k_Aligned_Access "
@@ -260,8 +262,8 @@ const drive_settings builtin_knowndrives[] = {
     "http://www.crucial.com/support/firmware.aspx\n"
     "http://www.micron.com/products/solid-state-storage/client-ssd#software",
     "-v 170,raw48,Grown_Failing_Block_Ct "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 173,raw48,Wear_Leveling_Count "
     "-v 174,raw48,Unexpect_Power_Loss_Ct "
     "-v 181,raw16,Non4k_Aligned_Access "
@@ -280,8 +282,8 @@ const drive_settings builtin_knowndrives[] = {
     "-v 5,raw48,Reallocate_NAND_Blk_Cnt "
   //"-v 9,raw24(raw8),Power_On_Hours "
   //"-v 12,raw48,Power_Cycle_Count "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 173,raw48,Ave_Block-Erase_Count "
     "-v 174,raw48,Unexpect_Power_Loss_Ct "
     "-v 180,raw48,Unused_Reserve_NAND_Blk "
@@ -309,8 +311,8 @@ const drive_settings builtin_knowndrives[] = {
   //"-v 9,raw24(raw8),Power_On_Hours "
   //"-v 12,raw48,Power_Cycle_Count "
     "-v 170,raw48,Reserved_Block_Count "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 173,raw48,Ave_Block-Erase_Count "
     "-v 174,raw48,Unexpect_Power_Loss_Ct "
     "-v 184,raw48,Error_Correction_Count "
@@ -401,8 +403,8 @@ const drive_settings builtin_knowndrives[] = {
     "-v 13,raw24/raw32,Soft_Read_Error_Rate "
     "-v 100,raw48,Gigabytes_Erased "
     "-v 170,raw48,Reserve_Block_Count "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 174,raw48,Unexpect_Power_Loss_Ct "
     "-v 177,raw48,Wear_Range_Delta "
     "-v 181,raw48,Program_Fail_Count "
@@ -632,8 +634,8 @@ const drive_settings builtin_knowndrives[] = {
   //"-v 9,raw24(raw8),Power_On_Hours "
   //"-v 12,raw48,Power_Cycle_Count "
     "-v 170,raw48,Reserve_Block_Count "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 183,raw48,SATA_Downshift_Count "
   //"-v 184,raw48,End-to-End_Error "
   //"-v 187,raw48,Reported_Uncorrect "
@@ -659,8 +661,8 @@ const drive_settings builtin_knowndrives[] = {
   //"-v 9,raw24(raw8),Power_On_Hours "
   //"-v 12,raw48,Power_Cycle_Count "
     "-v 170,raw48,Reserve_Block_Count "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 183,raw48,SATA_Downshift_Count " // FW >= 4Px10362
   //"-v 184,raw48,End-to-End_Error "
   //"-v 187,raw48,Reported_Uncorrect "
@@ -685,8 +687,8 @@ const drive_settings builtin_knowndrives[] = {
   //"-v 9,raw24(raw8),Power_On_Hours "
   //"-v 12,raw48,Power_Cycle_Count "
     "-v 170,raw48,Reserve_Block_Count "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 174,raw48,Unexpect_Power_Loss_Ct " // Missing in 710 specification from September 2011
     "-v 183,raw48,SATA_Downshift_Count "
   //"-v 184,raw48,End-to-End_Error "
@@ -722,8 +724,8 @@ const drive_settings builtin_knowndrives[] = {
     "-v 9,msec24hour32,Power_On_Hours_and_Msec "
   //"-v 12,raw48,Power_Cycle_Count "
     "-v 170,raw48,Available_Reservd_Space "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 174,raw48,Unexpect_Power_Loss_Ct "
   //"-v 184,raw48,End-to-End_Error "
     "-v 187,raw48,Uncorrectable_Error_Cnt "
@@ -745,8 +747,8 @@ const drive_settings builtin_knowndrives[] = {
     "-v 9,msec24hour32,Power_On_Hours_and_Msec "
   //"-v 12,raw48,Power_Cycle_Count "
     "-v 170,raw48,Available_Reservd_Space "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 174,raw48,Unexpect_Power_Loss_Ct "
     "-v 183,raw48,SATA_Downshift_Count "
   //"-v 184,raw48,End-to-End_Error "
@@ -771,8 +773,8 @@ const drive_settings builtin_knowndrives[] = {
     "-v 9,msec24hour32,Power_On_Hours_and_Msec "
   //"-v 12,raw48,Power_Cycle_Count "
     "-v 170,raw48,Available_Reservd_Space "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 174,raw48,Unexpect_Power_Loss_Ct "
     "-v 183,raw48,SATA_Downshift_Count "
   //"-v 184,raw48,End-to-End_Error "
@@ -817,8 +819,8 @@ const drive_settings builtin_knowndrives[] = {
   //"-v 9,raw24(raw8),Power_On_Hours "
   //"-v 12,raw48,Power_Cycle_Count "
     "-v 170,raw48,Available_Reservd_Space "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 174,raw48,Unsafe_Shutdown_Count "
     "-v 175,raw16(raw16),Power_Loss_Cap_Test "
     "-v 183,raw48,SATA_Downshift_Count "
@@ -988,8 +990,8 @@ const drive_settings builtin_knowndrives[] = {
     "-v 167,raw48,Min_Bad_Block/Die "
     "-v 168,raw48,Maximum_Erase_Cycle "
     "-v 169,raw48,Total_Bad_Block "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 173,raw48,Avg_Write_Erase_Ct "
     "-v 174,raw48,Unexpect_Power_Loss_Ct "
   //"-v 187,raw48,Reported_Uncorrect "
@@ -1012,8 +1014,8 @@ const drive_settings builtin_knowndrives[] = {
   //"-v 5,raw16(raw16),Reallocated_Sector_Ct "
   //"-v 9,raw24(raw8),Power_On_Hours "
   //"-v 12,raw48,Power_Cycle_Count "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 173,raw48,Avg_Write_Erase_Ct "
     "-v 174,raw48,Unexpect_Power_Loss_Ct "
   //"-v 187,raw48,Reported_Uncorrect "
@@ -1085,8 +1087,8 @@ const drive_settings builtin_knowndrives[] = {
     "-v 100,raw48,Erase_Program_Cycles "
     "-v 103,raw48,Remaining_Energy_Storg "
     "-v 170,raw48,Reserved_Block_Count "
-    "-v 171,raw48,Program_Fail_Count "
-    "-v 172,raw48,Erase_Fail_Count "
+  //"-v 171,raw48,Program_Fail_Count "
+  //"-v 172,raw48,Erase_Fail_Count "
     "-v 173,raw48,Wear_Leveling_Count "
     "-v 174,raw48,Unexpect_Power_Loss_Ct "
     "-v 211,raw48,Unknown_Attribute " // ] Missing in specification
